--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "gatsby-plugin-styled-components": "^3.3.11",
     "gatsby-remark-images": "^3.3.30",
     "gatsby-remark-lazy-load": "^1.0.2",
+    "gatsby-remark-prismjs": "^3.5.13",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-remark": "^2.8.35",
     "gatsby-transformer-sharp": "^2.5.7",
     "lazysizes": "^5.2.2",
+    "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.2.0",
